fix: final changes pt.1

--- a/css/create.css
+++ b/css/create.css
@@ -1,13 +1,14 @@
-html {
+#container {
     height: 100%;
     /* Fallback CSS for IE 4-6 and older browsers. Note: Without this setting, body below cannot achieve 100% height. */
     height: 100vh;
     /* Overrides 100% height in modern HTML5 browsers and uses the viewport's height. Only works in modern HTML5 browsers */
     display: flex;
     justify-content: center;
+    overflow-y: hidden;
 }
 
-#container {
+#container2 {
     height: auto;
     /* Allows content to grow beyond the page without overflow */
     /* Allows content to grow beyond the page without overflow */
